--- a/SpeechAndLeaflet/MultimodalGIS_Sphinx.html
+++ b/SpeechAndLeaflet/MultimodalGIS_Sphinx.html
@@ -583,7 +583,7 @@
             trackResize: true,
             worldCopyJump: false,
             closePopupOnClick: true,
-            zoomsliderControl: true,
+            //zoomsliderControl: true,
 			measureControl: true,
             loadingControl: true,
 			panControl: false,
