show legend on the left side Sphinx

--- a/SpeechAndLeaflet/MultimodalGIS_Sphinx.html
+++ b/SpeechAndLeaflet/MultimodalGIS_Sphinx.html
@@ -726,8 +726,8 @@
 					   };
 					   
 		var overlapMaps={"DVG":layerDVG,
-						  "DTK10_pan":layerDTK10_pan,
-						  "DGK5":layerDGK5
+						  "DTK10_pan":layerDTK10_pan
+						  //,	 "DGK5":layerDGK5
 						};	
 		
 		//Nokia, Mapbox and Cloudmate need specific registration data for defined layers. To provide these, you have to edit the leaflet-providers.js source 
@@ -784,7 +784,7 @@
 		
 		//Map control: Layer switcher
 								  
-		var controlArialMaps=L.control.layers(baseMaps,overlapMaps,{position:'topright',collapsed:false});
+		var controlArialMaps=L.control.layers(baseMaps,overlapMaps,{position:'bottomleft',collapsed:false});
 		var controlBasemaps=L.control.layers(baseLayers,null,{position:'topright'});
 		var controlOverlaylayers=L.control.layers(null,overlayLayers,{position:'topright'});
 		
