deleted superfluous baselayers

--- a/SpeechAndLeaflet/MultimodalGIS_Chrome.html
+++ b/SpeechAndLeaflet/MultimodalGIS_Chrome.html
@@ -724,8 +724,7 @@
 					   //,"DTK10":layerDTK10
 					   };
 					   
-		var overlapMaps={"DVG":layerDVG,
-						  "DTK10_pan":layerDTK10_pan
+		var overlapMaps={
 						//  ,	"DGK5":layerDGK5
 						};	
 		
