projects of the sidebar in a table

--- a/SpeechAndLeaflet/MultimodalGIS_Chrome.html
+++ b/SpeechAndLeaflet/MultimodalGIS_Chrome.html
@@ -132,6 +132,17 @@
 				<big>Recent Projects</big>
 			</b></br></br>
 		</div>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Description</th>
+					<th>Move to</th>					
+    			</tr>
+				</thead>
+			<tbody id = "tablebody">
+			</tbody>
+		</table>
 		<div id="sidebarProjectsContent">
 		</div>
 	</div>
