+content to startpage

--- a/SpeechAndLeaflet/index_startpage.html
+++ b/SpeechAndLeaflet/index_startpage.html
@@ -92,7 +92,22 @@
             <h1>Gesture & Speech Map</h1>
             <p class="text-success">IWGI - Interacting with Geographic Information</p>
           </div>
-          <p>Some Text here....</p>
+          <p>
+			This is a project of Masterstudents from the field of Geoinformatics of the WWU in M&#252;nster. In that one a map was created, which can be used by speech and gestures. 
+			For the gesture recognition a Kinect device is necessary. Within the help page the basic gestures and commands are explained.
+			<br>
+			<br>
+			<b><font color=RED>Required</font> components for using the map:</b>
+			<ul>
+			<li>Kinect device</li>
+			<li>Gesture recognition app (can be find in "Download App")</li>
+			</ul>
+			<b><font color=Green>Recommended</font> components for using the map:</b>
+			<ul><li>Microphone</li></ul>
+			<br>
+			For a visual explanation an introduction video can be found here:
+			
+		  </p>
           <div class="row">
             <!--/span-->
             <div class="col-6 col-sm-6 col-lg-4 col-md-3">
@@ -104,7 +119,7 @@
             <ul class="nav">
               <li>Information</li>
               <li>
-                <a href="url">Leaflet</a><a href="url">Plugins</a><a href="url">Speech API</a><a href="url">Gesture API</a>
+                <a href="http://leafletjs.com/" target="_blank">Leaflet</a><a href="url" target="_blank">Plugins</a><a href="url" target="_blank">Speech API</a><a href="http://www.openni.org/" target="_blank">OpenNI: Open-source SDK for 3D sensors</a>
               </li>
               <li>Downloads</li>
               <li>
