speech now active from the beginning, settings necessary...
I explain it in a meeting

--- a/SpeechAndLeaflet/MultimodalGIS_Chrome.html
+++ b/SpeechAndLeaflet/MultimodalGIS_Chrome.html
@@ -86,7 +86,7 @@
 	
 </head>
 
-<body>  
+<body onload="startButton();">  
     <div id="map">
 		<!--One vertical and one horizontal line within the map-->
         <div id="vertical"></div>
