--- a/SpeechAndLeaflet/Help&About.html
+++ b/SpeechAndLeaflet/Help&About.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Help and About</title>
+    <title>Support</title>
     <meta name="viewport" content="width=device-width">
 	<link href="src/bootstrap/bootstrap.min.css" rel="stylesheet">
 	    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css">
@@ -112,7 +112,7 @@ function offHover()
               <a href="MultimodalGIS_Sphinx.html">Map-Sphinx</a>
             </li>
             <li class="active">
-	     <a href="Help&About.html">Help&About</a>
+	     <a href="Help&About.html">Support</a>
             </li>
           </ul>
         </div>
@@ -132,7 +132,7 @@ function offHover()
 	<li class="active"><a href="#main" data-toggle="tab"><strong>Main Information</strong></a></li>
 	<li ><a href="#howtouse" data-toggle="tab"><strong> How To Use the System? </strong></a></li>
 	<li ><a href="#faqs" data-toggle="tab"><strong> FAQs </strong></a></li>
-	<li ><a href="#contactus" data-toggle="tab"><strong>Contact Us</strong></a></li>
+	<!-- <li ><a href="#contactus" data-toggle="tab"><strong>Contact Us</strong></a></li> -->
 	</ul>
       <!-- /.End of main tabs -->
  <div class="tab-content">
@@ -398,8 +398,7 @@ function offHover()
 
 			
 			  <!--End of Faqs-->
-			    <div class="tab-pane fade in " id="contactus">
-          </div>
+			  
 
  </div>      <!-- /.End of tab contents -->
  
