--- a/SpeechAndLeaflet/MultimodalGIS_Sphinx.html
+++ b/SpeechAndLeaflet/MultimodalGIS_Sphinx.html
@@ -56,7 +56,7 @@
 						  <a href="MultimodalGIS_Sphinx.html">Map-Sphinx</a>
 						</li>
                         <li>
-                            <a href="Help&About.html">Help&amp;About</a>
+                            <a href="Help&About.html">Support</a>
                         </li>
 						<li style="position:relative; top:15; left:15%">
 							<div ><p style="color:white;">Left hand</p></div>						 
