--- a/SpeechAndLeaflet/index_startpage.html
+++ b/SpeechAndLeaflet/index_startpage.html
@@ -73,7 +73,7 @@
               <a href="MultimodalGIS_Sphinx.html">Map-Sphinx</a>
             </li>
             <li>
-              <a href="Help&About.html">Help&amp;About</a>
+              <a href="Help&About.html">Support</a>
             </li>
             <li></li>
           </ul>
