--- a/SpeechAndLeaflet/Help&About.html
+++ b/SpeechAndLeaflet/Help&About.html
@@ -92,35 +92,28 @@ function offHover()
     </style>
 </head>
 <body>
- <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index_startpage.html">IWGI Gesture & Speech</a>
+<div id="header">
+        <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="MultimodalGIS_Chrome.html">IWGI Gesture & Speech</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li>
+						  <a href="MultimodalGIS_Chrome.html">Map</a>
+						</li>
+                        <li class="active">
+                            <a href="Help&About.html">Support</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-	    <li>
-              <a href="index_startpage.html">Home</a>
-            </li>
-            <li>
-              <a href="MultimodalGIS_Chrome.html">Map-Chrome</a>
-            </li>
-			<li>
-              <a href="MultimodalGIS_Sphinx.html">Map-Sphinx</a>
-            </li>
-            <li class="active">
-	     <a href="Help&About.html">Support</a>
-            </li>
-          </ul>
-        </div>
-        <!-- /.nav-collapse -->
-      </div>
-      <!-- /.container -->
-    </div>	
-	</div>
+    </div>
 	      <!-- Container of the content -->
 
 	<div class="container">
