update speech sidebar and speech commands

--- a/SpeechAndLeaflet/MultimodalGIS_Chrome.html
+++ b/SpeechAndLeaflet/MultimodalGIS_Chrome.html
@@ -149,31 +149,31 @@
 			<table width="400">
 				<tr>
 					<td>Zooming</td>
-					<td>zoom in / out</td>
+					<td style="color:#428BCA">zoom in / out</td>
 				</tr>
 				<tr>
 					<td>Panning</td>
-					<td>up, down, left, right</td>
+					<td style="color:#428BCA">up, down, left, right</td>
 				</tr>
 				<tr>
 					<td>User's location</td>
-					<td>where am I / don't show where i am</td>
+					<td style="color:#428BCA">where am I / don't show where i am</td>
 				</tr>
 				<tr>
 					<td>Initial view</td>
-					<td>go home</td>
+					<td style="color:#428BCA">go home</td>
 				</tr>
 				<tr>
 					<td>Measurement tool </td>
-					<td> start / stop measurement</td>
+					<td style="color:#428BCA"> start / stop measurement</td>
 				</tr>
 				<tr>
 					<td>Minimap</td>
-					<td>enable / disable minimap</td>
+					<td style="color:#428BCA">enable / disable minimap</td>
 				</tr>
 				<tr>
 					<td>Draw features</td>
-					<td>point / line</td>
+					<td style="color:#428BCA">point / line</td>
 				</tr>
 				<tr>
 					<td>Change baselayer</td>
