update help and support

--- a/SpeechAndLeaflet/Help&About.html
+++ b/SpeechAndLeaflet/Help&About.html
@@ -184,8 +184,8 @@ function offHover()
 	  
 		- Make sure that the Kinect device is plug-in and the Microphone is on
         </br>- Stand in front of the Kinect device 
-		</br>- Wave your RIGHT hand until the right hand indicator at the wabpage header become green  
-		</br>- Wave your LEFT hand until the left hand indicator at the wabpage header become green
+		</br>- raise-up your RIGHT hand until the right hand indicator at the wabpage header become green  
+		</br>- raise-up your LEFT hand until the left hand indicator at the wabpage header become green
 		</br>- The Speech recogniser is automatically working  
 		
        </div>
@@ -273,9 +273,12 @@ function offHover()
     <div id="collapseFive_howtouse" class="panel-collapse collapse">
       <div class="panel-body">
 	
-				    - To start  drawing a road ; say : <strong>"Road"</strong> 
-					</br> -Perform the "Clicking" gesture to assign points
+				   - To start  drawing a road ; say : <strong>"Road"</strong> 
+					</br> - Perform the "Clicking" gesture to assign points
 					</br> - !!!!!!!!!!!!!!!<strong>"!!!!!!!!!!!!!!!!!!"</strong> 
+					</br> - A side bar will appear to enter the road name, description and type 
+					</br> - You can use speech or keyboard to enter the road information. 
+					</br> - To move from one field to another use the "tab" gesture. 
 		
 	
 	  
@@ -361,7 +364,7 @@ function offHover()
     </div>
     <div id="collapseTwo_faqs" class="panel-collapse collapse">
       <div class="panel-body">
-	  There are two indicators at the page navigation header, one is for the left hand and the other is for  the right hand. Green color mean that the hand is recognized and the Red color mean the hand is not recognised. If one of the hands is not recognised you need to re-wave the unrecognised hand until the indicator convert to green
+	  There are two indicators at the page navigation header, one is for the left hand and the other is for  the right hand. Green color means that the hand is recognized and the Red color means the hand is not recognised. If one of the hands is not recognised you need to re-wave the unrecognised hand until the indicator convert to green
 	</br>  <img class="col-md-3 col-md-offset-3" src="./handindicator.png" height="100" width="80">
      </div>
     </div>
