--- a/SpeechAndLeaflet/MultimodalGIS_Chrome.html
+++ b/SpeechAndLeaflet/MultimodalGIS_Chrome.html
@@ -173,7 +173,7 @@
 				</tr>
 				<tr>
 					<td>Draw features</td>
-					<td style="color:#428BCA">point / line</td>
+					<td style="color:#428BCA">point / road</td>
 				</tr>
 				<tr>
 					<td>Change baselayer</td>
